Update Web projects

--- a/samples/net6/WebAspMvc/WebAspMvc.csproj
+++ b/samples/net6/WebAspMvc/WebAspMvc.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>WebAspMvc</RootNamespace>
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
