--- a/samples/net6/WebBlazorWasmApp/Client/WebBlazorWasmApp.Client.csproj
+++ b/samples/net6/WebBlazorWasmApp/Client/WebBlazorWasmApp.Client.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
