--- a/samples/net6/WebAspSpa/ClientApp/angular.json
+++ b/samples/net6/WebAspSpa/ClientApp/angular.json
@@ -117,7 +117,8 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
-              "vendorChunk": true
+              "vendorChunk": true,
+              "buildOptimizer": true
             },
             "production": {
               "optimization": true,
@@ -125,14 +126,14 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
-              "vendorChunk": false
+              "vendorChunk": false,
+              "buildOptimizer": true
             }
           }
         }
       }
     }
   },
-  "defaultProject": "AspNetSpa",
   "cli": {
     "analytics": "45cd4591-9e7b-44dc-90dc-6b9e4fe63cb9"
   }
