added support for rooted paths fixed rsync bugs

--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -263,12 +263,15 @@
     </Content>
     <Content Include="ToolsExternal\bin\ssh-add.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="ToolsExternal\bin\ssh-agent.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="ToolsExternal\bin\ssh-keygen.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="ToolsExternal\bin\ssh.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
