--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -73,8 +73,11 @@
     <Compile Include="Infrastructure\DirectoryHelper.cs" />
     <Compile Include="Infrastructure\FileHelper.cs" />
     <Compile Include="RemoteOperations\IRemoteBulkCopySessionService.cs" />
+    <Compile Include="RemoteOperations\ISecureShellKeyPassphraseService.cs" />
+    <Compile Include="RemoteOperations\ISecureShellKeySetupService.cs" />
     <Compile Include="RemoteOperations\ISecureShellSessionBaseService.cs" />
     <Compile Include="RemoteOperations\SecureShellCopyProgress.cs" />
+    <Compile Include="RemoteOperations\SecureShellKeyPassphraseService.cs" />
     <Compile Include="RemoteOperations\SecureShellRemoteBulkCopyDeltaSessionService.cs" />
     <Compile Include="RemoteOperations\SecureShellRemoteBulkCopyRsyncSessionService.cs" />
     <Compile Include="RemoteOperations\ShellStreamExtensions.cs" />
@@ -94,13 +97,14 @@
     <Compile Include="ProjectSystem\UnconfiguredPackageServiceFactory.cs" />
     <Compile Include="ProjectSystem\Build\SecureShellDeployService.cs" />
     <Compile Include="RemoteOperations\SecureShellKeySetupSettings.cs" />
-    <Compile Include="RemoteOperations\ISecureShellKeySetupService.cs" />
     <Compile Include="RemoteOperations\SecureShellKeyPairCreatorService.cs" />
     <Compile Include="RemoteOperations\SecureShellKeySetupService.cs" />
     <Compile Include="Commands\SetupHttpsCommand.cs" />
+    <Compile Include="VsInterop\IVsSolutionEventsFacade.cs" />
     <Compile Include="VsInterop\OutputPaneTextWriterService.cs" />
     <Compile Include="ProjectSystem\Build\DotnetPublishService.cs" />
     <Compile Include="VsInterop\IVsSolutionFacade.cs" />
+    <Compile Include="VsInterop\VsSolutionEventsListener.cs" />
     <Compile Include="VsInterop\VsOutputWindowPaneExtensions.cs" />
     <Compile Include="VsInterop\VsInteropExtensions.cs" />
     <Compile Include="VsInterop\AsyncServiceProviderExtensions.cs" />
@@ -323,6 +327,7 @@
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
@@ -450,12 +455,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Resource>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="RemoteOperations\SecureShellPassphraseDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
