--- a/samples/net8/WebRazorClassLibrary/WebRazorClassLibrary.csproj
+++ b/samples/net8/WebRazorClassLibrary/WebRazorClassLibrary.csproj
@@ -16,7 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.21" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.22" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.22" />
   </ItemGroup>
 
 </Project>
