--- a/samples/net9/UnoGuiApp/UnoGuiApp/Properties/launchSettings.json
+++ b/samples/net9/UnoGuiApp/UnoGuiApp/Properties/launchSettings.json
@@ -17,6 +17,16 @@
       "commandLineArgs": "{ProjectDir}/bin/Debug/net9.0-desktop/UnoGuiApp.dll",
       "distributionName": "",
       "compatibleTargetFramework": "desktop"
+    },
+    "SSH Remote": {
+      "commandName": "SshRemoteLaunch",
+      "environmentVariables": {
+        "DISPLAY": ":0.0"
+      },
+      "hostName": "raspberrypi",
+      "userName": "pi",
+      "privateKey": "%userprofile%\\\\.ssh\\\\id_rsa",
+      "hostPort": "22"
     }
   }
 }
