--- a/samples/net9/UnoGuiApp/UnoGuiApp/UnoGuiApp.csproj
+++ b/samples/net9/UnoGuiApp/UnoGuiApp/UnoGuiApp.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Uno.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net9.0-desktop;net9.0-windows10.0.26100</TargetFrameworks>
+    <TargetFrameworks>net9.0-desktop</TargetFrameworks>
 
     <OutputType>Exe</OutputType>
     <UnoSingleProject>true</UnoSingleProject>
@@ -16,17 +16,6 @@
     <ApplicationPublisher>MichaelKoster</ApplicationPublisher>
     <!-- Package Description -->
     <Description>UnoGuiApp powered by Uno Platform.</Description>
-    <!--
-      If you encounter this error message:
-
-        error NETSDK1148: A referenced assembly was compiled using a newer version of Microsoft.Windows.SDK.NET.dll.
-        Please update to a newer .NET SDK in order to reference this assembly.
-
-      This means that the two packages below must be aligned with the "build" version number of
-      the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
-      must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
-    -->
-    <!-- <WindowsSdkPackageVersion>10.0.22621.28</WindowsSdkPackageVersion> -->
 
     <!--
       UnoFeatures are used to quickly add and manage features enabled for your app.
