Update workflow permissions (#91)
* Add missing workflow permissions

--- a/.github/workflows/project-release.yml
+++ b/.github/workflows/project-release.yml
@@ -59,6 +59,7 @@ jobs:
     name: VS Marketplace Release
     runs-on: windows-2022
     needs: build
+    permissions: {}
     if: ${{ github.ref_type == 'tag' }}
 
     env:
