--- a/.github/workflows/project-ci.yml
+++ b/.github/workflows/project-ci.yml
@@ -15,6 +15,10 @@ concurrency:
 jobs:
   build:
     name: CI Build
+    permissions:
+      contents: read
+      id-token: write
     uses: ./.github/workflows/shared-build.yml
     with:
       store-artifacts: false
+      environment: CI
