--- a/.github/workflows/project-release.yml
+++ b/.github/workflows/project-release.yml
@@ -11,6 +11,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 jobs:
   build:
     name: Release Build
@@ -18,10 +21,13 @@ jobs:
     with:
       store-artifacts: true
       sign-vsix: true
+      environment: Release
+      azure-timestamp-url: ${{ vars.AZURE_TIMESTAMP_URL }}
     secrets:
-      SIGNING_CERT_PFX: ${{ secrets.SIGNING_CERT_PFX }}
-      SIGNING_CERT_PASSWORD: ${{ secrets.SIGNING_CERT_PASSWORD }}
-      SIGNING_CERT_THUMBPRINT: ${{ secrets.SIGNING_CERT_THUMBPRINT }}
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      AZURE_KEYVAULT_URL: ${{ secrets.AZURE_KEYVAULT_URL }}
+      AZURE_KEYVAULT_CERT_NAME: ${{ secrets.AZURE_KEYVAULT_CERT_NAME }}
 
   github-release:
     name: GitHub Release
