--- a/.github/workflows/project-release.yml
+++ b/.github/workflows/project-release.yml
@@ -11,12 +11,12 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-permissions:
-  contents: read
-
 jobs:
   build:
     name: Release Build
+    permissions:
+      contents: read
+      id-token: write     
     uses: ./.github/workflows/shared-build.yml
     with:
       store-artifacts: true
