--- a/src/Tests/RemoteDebuggerLauncherUnitTests/RemoteDebuggerLauncherUnitTests.csproj
+++ b/src/Tests/RemoteDebuggerLauncherUnitTests/RemoteDebuggerLauncherUnitTests.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-      <Version>6.0.0</Version>
+      <Version>8.0.3</Version>
     </PackageReference>
     <PackageReference Include="MSTest.TestAdapter">
       <Version>2.2.7</Version>
@@ -66,14 +66,11 @@
     <PackageReference Include="MSTest.TestFramework">
       <Version>2.2.7</Version>
     </PackageReference>
-    <PackageReference Include="Serilog">
-      <Version>2.12.0</Version>
-    </PackageReference>
-    <PackageReference Include="Serilog.Extensions.Logging">
-      <Version>3.1.0</Version>
+    <PackageReference Include="Serilog.Extensions.Logging.File">
+      <Version>3.0.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.File">
-      <Version>5.0.0</Version>
+      <Version>7.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
