--- a/src/Tests/RemoteDebuggerLauncherUnitTests/RemoteDebuggerLauncherUnitTests.csproj
+++ b/src/Tests/RemoteDebuggerLauncherUnitTests/RemoteDebuggerLauncherUnitTests.csproj
@@ -57,8 +57,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-      <Version>8.0.3</Version>
+    <PackageReference Include="Microsoft.Extensions.Logging">
+      <Version>8.0.1</Version>
     </PackageReference>
     <PackageReference Include="MSTest.TestAdapter">
       <Version>2.2.7</Version>
