--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -134,7 +134,7 @@
     <Compile Include="RemoteOperations\ISecureShellSessionCommandingService.cs" />
     <Compile Include="VsInterop\OutputPaneWriterService.cs" />
     <Compile Include="Options\OptionsPageAccessorService.cs" />
-    <Compile Include="Logging\LoggerFactory.cs" />
+    <Compile Include="Logging\DebugLoggerFactory.cs" />
     <Compile Include="Logging\NullLogger.cs" />
     <Compile Include="Logging\NullLoggerFactory.cs" />
     <Compile Include="Infrastructure\RemoteDebuggerLauncherException.cs" />
@@ -371,7 +371,6 @@
     <PackageReference Include="Serilog.Extensions.Logging.File">
       <Version>3.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NuGet.VisualStudio" Version="17.4.0" ExcludeAssets="runtime" />
     <PackageReference Include="SSH.NET" Version="2025.0.0" />
