--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Infrastructure\DirectoryHelper.cs" />
     <Compile Include="Infrastructure\FileHelper.cs" />
     <Compile Include="Infrastructure\NativeMethods.cs" />
+    <Compile Include="ProjectSystem\Debugger\LaunchProfile.cs" />
     <Compile Include="RemoteOperations\IRemoteBulkCopySessionService.cs" />
     <Compile Include="RemoteOperations\ISecureShellSessionBaseService.cs" />
     <Compile Include="RemoteOperations\SecureShellCopyProgress.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="VsInterop\OutputPaneTextWriterService.cs" />
     <Compile Include="ProjectSystem\Build\DotnetPublishService.cs" />
     <Compile Include="VsInterop\IVsSolutionFacade.cs" />
+    <Compile Include="VsInterop\OutputPaneWriterServiceAsync.cs" />
     <Compile Include="VsInterop\VsOutputWindowPaneExtensions.cs" />
     <Compile Include="VsInterop\VsInteropExtensions.cs" />
     <Compile Include="VsInterop\AsyncServiceProviderExtensions.cs" />
@@ -205,6 +207,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Resource Include="Resources\IconQueryDotnet.png" />
     <Content Include="ToolsExternal\README.cwrsync.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
@@ -469,7 +472,12 @@
       <SubType>Designer</SubType>
     </Resource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\IconQueryDotnet.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
